kubernetes/apps/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: plex
  ports:
    - name: web
      port: 32400
      targetPort: 32400
      protocol: TCP
